package cypher

type Model struct {
	matched []string
}

// func (c *Cypher) Model(entities ...types.Entity) types.Model {
// 	return &Model{}
// }

// func (m *Model) Match(entities ...types.Entity) types.Model {

// 	return nil
// }

// func (m *Model) Load(entities ...types.Entity) {

// 	return nil
// }
